# cpp-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ellisis/: main.cpp
src/: CMakeLists.txt
src/alias_declarations/: CMakeLists.txt  alias_declarations.cpp
src/copy_constructor/: CMakeLists.txt  copy_constructor.cpp  holder.cpp  holder.hpp
src/ellipsis/: CMakeLists.txt  ellipsis.cpp  main.cpp
src/expression_types/: CMakeLists.txt  rvalue_and_lvalue.cpp  rvalue_reference.cpp
src/move_semantics/: CMakeLists.txt  holder.cpp  holder.hpp  move_semantics.cpp
src/null_and_nullptr/: CMakeLists.txt  null_and_nullptr.cpp
src/rule_of_five/: CMakeLists.txt  holder.cpp  holder.hpp  rule_of_five.cpp
src/rule_of_three/: CMakeLists.txt  holder.cpp  holder.hpp  rule_of_three.cpp
src/smart_pointers/: CMakeLists.txt  unique_pointer.cpp
src/static_in_namespace/: CMakeLists.txt  namespace_header.cpp  namespace_header.h  static_in_namespace.cpp
src/string/: CMakeLists.txt  compare.cpp
src/template_function/: CMakeLists.txt  main.cpp  template_function.cpp  test_template_function.cpp  test_template_function.hpp
src/testing_with_google_test/: CMakeLists.txt  function.cpp  function.hpp  main.cpp  test.cpp
src/type_deduction/: CMakeLists.txt  auto_type_deduction.cpp  decltype_type_deduction.cpp  template_type_deduction.cpp
src/type_traits/: CMakeLists.txt  decay.cpp
template_function/: main.cpp  template_function.cpp
