# Add example directories each with own CMakeLists.txt files.
add_subdirectory(template_function)
add_subdirectory(ellipsis)
add_subdirectory(smart_pointers)
add_subdirectory(expression_types)
add_subdirectory(string)
add_subdirectory(move_semantics)
add_subdirectory(rule_of_three)
add_subdirectory(rule_of_five)
